--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 <!-- Start Content HERE-->
 
-<article><h1>#DennisCoderre</h1>
+<article><h1>#DenisCoderre</h1>
 
 	<p class="author">par MARIE-ÈVE TREMBLAY</p>
 
@@ -198,6 +198,12 @@
 	<h2>Denis Coderre ou… « coach mayor »? #HabsDC</h2>
 
 	<div class="chart-container" id="visu-bulle"></div>
+	<div class="description">Tous les hashtags. Catégories:<br>
+	<span class="legend" style="background-color:rgb(31, 119, 180)"></span>Sport
+	<span class="legend" style="background-color:rgb(174, 199, 232)"></span>Politique
+	<span class="legend" style="background-color:rgb(44, 160, 44)"></span>Culture
+	<span class="legend" style="background-color:rgb(255, 187, 120)"></span>Cause
+	<span class="legend" style="background-color:rgb(255, 127, 14)"></span>Humeur<hr></div>
 
 	<p>Si Denis Coderre est connu sur ce réseau social, ce n’est pas uniquement pour son profil
 		politique. Partisan inconditionnel du Tricolore, il ne ménage pas les 140 caractères lors des
@@ -222,6 +228,7 @@
 		Charlie Hebdo.</p>
 
 	<div class="chart-container" id="visu-retweets"></div>
+	<div class="description">Tweets les plus retweetés<hr></div>
 
 	<p>Si Denis Coderre est toujours présent sur Twitter, d’autres politiciens délaissent quant à eux
 		le réseau social, remarque Bernard Motulsky. Peut-être parce que les sujets qu’ils abordent sur
@@ -266,6 +273,7 @@
 		<div class="chart-container" id="visu-reponses1"></div>
 		<div class="chart-container" id="visu-reponses2"></div>
 	</div>
+	<div class="description">Mots-clef de réponses par Denis Coderre et Caroline St-Hilaire<hr></div>
 
 	<p>Denis Coderre est connu pour s’ingérer jusque dans les petits dossiers. Cet aspect de sa
 		personnalité se révèle aussi sur Twitter. Exemple? Les pics antiitinérants installés devant le
@@ -342,6 +350,7 @@
 	</p>
 
 	<div class="chart-container" id="visu-horaire"></div>
+	<div class="description">Tweets par heure du jour<hr></div>
 
 	<h2>Denis Coderre en temps de crise #Grabuge</h2>
 
@@ -356,6 +365,7 @@
 		sports.</p>
 
 	<div class="chart-container" id="visu-mensuel"></div>
+	<div class="description">Tweets par mois<hr></div>
 
 	<h2>Apprendre de ses erreurs... #Desharnais</h2>
 
@@ -384,219 +394,7 @@
 <!-- from charts library -->
 <script type="text/javascript" src="lib/d3.js"></script>
 <script type="text/javascript" src="lib/moby-0.1.0.js"></script>
-<script>
+<script type="text/javascript" src="js/charts.js"></script>
 
-var categories = [
-	{name: "#HabsDC", values: [529], category: "Sport"},
-	{name: "#CMJ2015", values: [103], category: "Sport"},
-	{name: "#Sotchi2014", values: [72], category: "Sport"},
-	{name: "#polmtl", values: [53], category: "Politique"},
-	{name: "#Yesssss", values: [48], category: "Humeur"},
-	{name: "#Fierté", values: [27], category: "Cause"},
-	{name: "#RIP", values: [26], category: "Sport"},
-	{name: "#CarabinsDC", values: [21], category: "Sport"},
-	{name: "#merci", values: [18], category: "Humeur"},
-	{name: "#Bravo", values: [18], category: "Humeur"},
-	{name: "#AlsDC", values: [17], category: "Sport"},
-	{name: "#Montréal", values: [16], category: "Politique"},
-	{name: "#respect", values: [13], category: "Humeur"},
-	{name: "#NHL15Subban", values: [13], category: "Sport"},
-	{name: "#JeSuisCharlie", values: [13], category: "Cause"},
-	{name: "#IMFC", values: [13], category: "Sport"},
-	{name: "#Oscar2014", values: [12], category: "Culture"},
-	{name: "#CoupeDuMondeBresil", values: [12], category: "Sport"},
-	{name: "#wow", values: [11], category: "Humeur"},
-	{name: "#GoCanadaGo", values: [11], category: "Sport"},
-	{name: "#BellCause", values: [11], category: "Cause"},
-	{name: "#neigemtl", values: [10], category: "Politique"},
-	{name: "#GoHabsGo", values: [10], category: "Sport"},
-	{name: "#mtlcomiccon", values: [9], category: "Culture"},
-	{name: "#lapresseplus", values: [9], category: "Politique"},
-	{name: "#GPF1Mtl", values: [9], category: "Sport"},
-	{name: "#FIFA2014U20", values: [9], category: "Sport"},
-	{name: "#Coderre2013", values: [9], category: "Politique"},
-	{name: "#CMM", values: [8], category: "Politique"},
-	{name: "#Solidarité", values: [7], category: "Cause"},
-	{name: "#rigueur", values: [7], category: "Politique"},
-	{name: "#polqc", values: [7], category: "Politique"},
-	{name: "#MTL", values: [6], category: "Politique"},
-	{name: "#IceBucketChallenge", values: [6], category: "Cause"},
-	{name: "#ExposDC", values: [6], category: "Sport"},
-	{name: "#DevoirdeMemoire", values: [6], category: "Cause"},
-	{name: "#ShowduRefuge", values: [5], category: "Culture"},
-	{name: "#RevueEtCorrigee", values: [5], category: "Culture"},
-	{name: "#mtl2013", values: [5], category: "Politique"},
-	{name: "#GenieArmy", values: [5], category: "Sport"},
-	{name: "#CoupeVanier", values: [5], category: "Sport"},
-	{name: "#TourneeCMMHelico", values: [4], category: "Politique"},
-	{name: "#TLMEP", values: [4], category: "Politique"},
-	{name: "#TeamCanada", values: [4], category: "Sport"},
-	{name: "#RIPGillesLatulippe", values: [4], category: "Culture"},
-	{name: "#Outremont", values: [4], category: "Politique"},
-	{name: "#ouffff", values: [4], category: "Humeur"},
-	{name: "#onjasela", values: [4], category: "Humeur"},
-	{name: "#MontrealIsBack", values: [4], category: "Sport"},
-	{name: "#jevoismtl", values: [4], category: "Politique"},
-	{name: "#Haiti", values: [4], category: "Politique"},
-	{name: "#Habs", values: [4], category: "Sport"},
-	{name: "#FocusMontreal", values: [4], category: "Sport"},
-	{name: "#CityLab2014", values: [4], category: "Politique"},
-	{name: "#CharlieHebdo", values: [4], category: "Cause"},
-	{name: "#CaraBangBang", values: [4], category: "Sport"},
-	{name: "#CANvsSWE", values: [4], category: "Sport"},
-	{name: "#ButePascal", values: [4], category: "Sport"},
-	{name: "#Budget2015", values: [4], category: "Politique"},
-	{name: "#AllezLesBleus", values: [4], category: "Sport"}
-];
-
-var hashtags = moby.init({
-	containerSelector: '#visu-bulle'
-})
-	.setConfig({
-		type: 'bubble',
-		colorByKey: 'category',
-		labelFormatter: function(d) {
-			return d.name + '<br><span class="value">(' + d.values + ')</span>';
-		}
-	})
-	.render(categories);
-
-/*TODO
- -enlever avant 4 nov
- */
-var dataRetweets = [
-	{name: "Allez les amis. Célébrons cette belle victoire de nos Glorieux en votant pour #NHL15Subban a vos posts #HabsDC. RT MASSIF SVP!!!", values: [1357], category: "Sport"},
-	{name: "Ok les amis j'ai besoin de vous. Il faut voter pour #NHL15Subban RT MASSIF SVP! :)", values: [947], category: "Sport"},
-	{name: "Message à tous les partisans du Canadien :))  Un geste pour supporter #NHL15Subban  #GoHabsGo #HabsDC RT MASSIF SVP!!!", values: [939], category: "Sport"},
-	{name: "VICTOIRE!!!! le drapeau du CH va flotter à l'Hotel de Ville de Boston!!!! #HabsDC", values: [762], category: "Sport"},
-	{name: "Un petit #retweet pour #BellCause ? Allez tous en chœur !! :) http://t.co/9WPYaCzTlI", values: [711], category: "Cause"},
-	{name: "J'ai hâte de voir flotter le drapeau du Canadien à l'Hotel de Ville de Boston #Yesssss #HabsDC", values: [704], category: "Sport"},
-	{name: "Bonsoir j'aimerais parler au maire de New York svp...? ;) #HabsDC", values: [575], category: "Sport"},
-	{name: "J'invite les Montréalais à démontrer leur fierté et leur appui à nos Canadiens dans le respect suite à notre victoire sur TampaBay #HabsDC", values: [556], category: "Sport"},
-	{name: "Yesssss! Bravo David :) #HabsDC", values: [500], category: "Sport"},
-	{name: "En guise de solidarité au #CharlieHebdo, pour la liberté de la presse  #JeSuisCharlie http://t.co/W73tr4rf4T", values: [435], category: "Cause"}
-];
-
-var retweets = moby.init({
-	containerSelector: '#visu-retweets'
-})
-	.setConfig({
-		type: 'bar',
-		colorByKey: 'category'
-	})
-	.render(dataRetweets);
-
-var dataReponsesCoderre = [
-	{name: ':))', values: [106]},
-	{name: 'oui', values: [86]},
-	{name: 'bonne', values: [80]},
-	{name: 'journée', values: [30]},
-	{name: 'focus', values: [27]},
-	{name: '@panormandin', values: [26]},
-	{name: 'mtl', values: [23]},
-	{name: 'année', values: [22]},
-	{name: '@fcormierrc', values: [22]},
-	{name: 'plaisir', values: [21]},
-	{name: '@fournier_claude', values: [17]},
-	{name: 'désolé', values: [16]},
-	{name: 'hahaha', values: [16]},
-	{name: '@moicelestia', values: [16]},
-	{name: 'soirée', values: [14]},
-	{name: 'magnifique', values: [14]},
-	{name: 'mieux', values: [12]},
-	{name: 'naaan', values: [12]},
-	{name: 'soir', values: [12]}
-];
-
-var reponses1 = moby.init({
-	containerSelector: '#visu-reponses1'
-})
-	.setConfig({
-		type: 'bubble',
-		labelFormatter: function(d) {
-			return d.name + '<br><span class="value">(' + d.values + ')</span>';
-		}
-	})
-	.render(dataReponsesCoderre);
-
-var dataReponses2 = [
-	{name: 'merci', values: [27]},
-	{name: '@villelongueuil', values: [13]},
-	{name: 'oui', values: [11]},
-	{name: 'faire', values: [9]},
-	{name: '#longueuil', values: [13]},
-	{name: 'bonne', values: [8]},
-	{name: 'voir', values: [8]},
-	{name: '@mclortie', values: [7]},
-	{name: '@donatsty', values: [7]},
-	{name: '@fcormierrc', values: [7]},
-	{name: '@maka_kotto', values: [6]},
-	{name: 'ville', values: [6]},
-	{name: 'absolument', values: [5]},
-	{name: '@thomasgerbet', values: [5]},
-	{name: 'bonjour', values: [5]},
-	{name: '@nathalie_b', values: [5]},
-	{name: '@rocketgil', values: [5]},
-	{name: '#jdq2014', values: [5]},
-	{name: '@deniscoderre', values: [5]}
-];
-
-var reponses2 = moby.init({
-	containerSelector: '#visu-reponses2'
-})
-	.setConfig({
-		type: 'bubble',
-		labelFormatter: function(d) {
-			return d.name + '<br><span class="value">(' + d.values + ')</span>';
-		}
-	})
-	.render(dataReponses2);
-
-var dataTweetsHour = [
-	{
-		name: 'Tweets par heure du jour',
-		values: [218, 87, 14, 13, 2, 11, 58, 108, 256, 293, 290, 290, 321, 280, 345, 381, 367, 354, 379, 318, 405, 570, 541, 374],
-		labels: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
-	},
-	{name: 'Tweets par jour de la semaine', values: [701, 813, 1059, 896, 1088, 898, 820], labels: ['Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi', 'Samedi', 'Dimanche']}
-];
-
-var hours = moby.init({
-	containerSelector: '#visu-horaire'
-})
-	.setConfig({
-		type: 'bar2D',
-		tooltipFormatter: function(d, i) {
-			return d.values;
-		},
-		labelFormatter: function(d, i) {
-			return '<span class="label-title"> ' + d.labels[i] + '</span>';
-		}
-	})
-	.render(dataTweetsHour);
-
-var dataTweetsMonth = [
-	{
-		name: 'Tweets par mois',
-		values: [128, 181, 177, 362, 311, 297, 441, 336, 251, 200, 306, 343, 303, 268, 349, 231, ],
-		labels: ["Nov-13", "Déc-13", "Jan-14", "Fév-14", "Mar-14", "Avr-14", "Mai-14", "Juin-14", "Juil-14", "Août-14", "Sept-14", "Oct-14", "Nov-14", "Déc-14", "Jan-15", "Fév-15"]
-	}
-];
-
-var months = moby.init({
-	containerSelector: '#visu-mensuel'
-})
-	.setConfig({
-		type: 'bar2D',
-		tooltipFormatter: function(d, i) {
-			return d.values;
-		},
-		labelFormatter: function(d, i) {
-			return '<span class="label-title"> ' + d.labels[i] + '</span>';
-		}
-	})
-	.render(dataTweetsMonth);
-
-</script>
 </body>
 </html>
