--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="http://ici.radio-canada.ca/Content/component.Footer.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="http://s.radio-canada.ca/_css/modules/modules.barrepartagee.1.0.0.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="http://s.radio-canada.ca/mp/modules.socialbar.1.0.0.css" />
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <script src='http://ici.radio-canada.ca/Content/generated/main.min.js'></script>
     <script src='http://ici.radio-canada.ca/Content/generated/app.min.js'></script>
@@ -109,20 +110,21 @@
                     </article>
                 </div>
                 <article>
-                    <p class="intro">Avec ses 186 000 abonnés et ses 38 000 tweets depuis 2008, Denis Coderre est l’une des personnalités politiques québécoises, voire canadiennes, les plus actives sur Twitter. De quoi parle le maire de la plus grosse ville au Québec?</p>
-                    <p>ICI Grand Montréal a passé au peigne fin les 4500 tweets depuis son arrivée à la mairie, le 4 novembre 2013. Portrait d’un personnage coloré.</p>
+                    <p class="intro">Avec ses 186 000 abonnés et ses 38 000 tweets depuis 2008, Denis Coderre est l’une des personnalités politiques québécoises, voire canadiennes, les plus actives sur Twitter. De quoi parle le maire de la plus grosse ville au Québec?
+                    ICI Grand Montréal a passé au peigne fin les 4500 tweets depuis son arrivée à la mairie, le 4 novembre 2013. Portrait d’un personnage coloré.</p>
                     <h2>DENIS CODERRE OU… « COACH MAYOR »? </h2>
+                    <p>Si Denis Coderre est connu sur ce réseau social, ce n’est pas uniquement pour son profil politique. Partisan inconditionnel du Tricolore, il ne ménage pas les 140 caractères lors des matchs. Certains le surnomment même « coach mayor ». Avec raison puisque parmi les cinq mots-clics les plus souvent utilisés par le maire, trois sont en lien avec le hockey. </p>
+                    <p class="description">Hashtags qui ont plus de quatre occurrences, par catégorie<br/></p>
 
                     <div class="chart-container" id="visu-bulle"></div>
-                    <div class="description">Tous les hashtags. Catégories:<br>
+                    <div class="legend-container">
                         <span class="legend" style="background-color:#e06666"></span>Sport
                         <span class="legend" style="background-color:#aad4e5"></span>Politique
                         <span class="legend" style="background-color:#65b9ab"></span>Culture
                         <span class="legend" style="background-color:#75a2cb"></span>Cause
-                        <span class="legend" style="background-color:#eb974f"></span>Humeur<hr>
+                        <span class="legend" style="background-color:#eb974f"></span>Humeur
                     </div>
 
-                    <p>Si Denis Coderre est connu sur ce réseau social, ce n’est pas uniquement pour son profil politique. Partisan inconditionnel du Tricolore, il ne ménage pas les 140 caractères lors des matchs. Certains le surnomment même « coach mayor ». Avec raison puisque parmi les cinq mots-clics les plus souvent utilisés par le maire, trois sont en lien avec le hockey. </p>
                     <blockquote>
                         <blockquote>« Le sport, c’est sa marque de commerce. Comme il s’agit d’une passion partagée par plusieurs, ça a pour effet de rassembler les gens.»</blockquote>
                         <p class="credit">Bernard Motulsky <br/></p>
@@ -132,8 +134,8 @@
                     <h2>Un maire populaire et solidaire </h2>
                     <p>Après le hockey, ce sont ses prises de paroles pour des causes qui suscitent le plus d’engagement chez les internautes. Deux exemples? La campagne <a href="javascript:void(0)">#BellCause</a> ou encore le mouvement pour la liberté de presse <a href="javascript:void(0)">#JeSuisCharlie</a>, à la suite de la fusillade à l’hebdomadaire français Charlie Hebdo.<br/></p>
 
+                    <p class="description">Tweets les plus retweetés</p>
                     <div class="chart-container" id="visu-retweets"></div>
-                    <div class="description">Tweets les plus retweetés<hr></div>
 
                     <p>Si Denis Coderre est toujours présent sur Twitter, d’autres politiciens délaissent quant à eux le réseau social, remarque Bernard Motulsky. Peut-être parce que les sujets qu’ils abordent sur Twitter « n’excitent pas beaucoup ». Selon lui, Denis Coderre est populaire parce qu’il apporte une touche personnelle à ses écrits. Autrement, le serait-il autant? « Je ne pense pas. »</p>
                     <p>Quoi qu’il en soit, sa notoriété virtuelle dépasse largement celle des autres maires réunis. </p>
@@ -147,92 +149,86 @@
                     <p>Le maire Coderre entretient l’image d’un politicien près des gens. Twitter n’y fait pas exception. De tous les tweets générés depuis qu’il est en poste, 37 % sont des réponses. Il a interagi avec près de 1500 personnes différentes. Comme la longueur de ses réponses est pour la plupart du temps brève, on comprend qu’il n’engage pas vraiment de discussion. </p>
                     <p>« Personne ne pense influencer des décisions politiques par le biais de Twitter », affirme Bernard Motulsky. Interagir avec la population « est déjà un gros pas » dans la mesure ou la personnalité politique reste elle-même, ajoute le chercheur.</p>
                     <p>Quelle est la nature de ses interactions avec les citoyens? Nous avons rassemblé les mots et les personnes qui reviennent le plus souvent dans ses réponses. À titre comparatif, nous avons fait le même exercice avec les réponses de la mairesse de Longueuil, Caroline St-Hilaire, elle aussi très active.</p>
+                    <blockquote>« Alimenter Twitter demande une grande discipline (ce n’est pas toujours facile d’exprimer clairement nos idées en 140 caractères!) et beaucoup de temps, mais pour le contact direct que ça me donne avec les citoyens, ca vaut le coût! »<br/></blockquote>
+                    <p class="credit">Caroline St-Hilaire<br/></p>
+                    <p class="credit-poste">Usager twitter<br/></p>
 
                     <div id="visu-reponses">
                         <div class="chart-container" id="visu-reponses1"></div>
                         <div class="chart-container" id="visu-reponses2"></div>
                     </div>
-                    <div class="description">Mots-clef de réponses par Denis Coderre et Caroline St-Hilaire<hr></div>
 
-                    <blockquote>
-                        <blockquote>« Alimenter Twitter demande une grande discipline (ce n’est pas toujours facile d’exprimer clairement nos idées en 140 caractères!) et beaucoup de temps, mais pour le contact direct que ça me donne avec les citoyens, ca vaut le coût! »<br/></blockquote>
-                        <p class="credit">Caroline St-Hilaire<br/></p>
-                        <p class="credit-poste">Usager twitter<br/></p>
+                    <p>Denis Coderre est connu pour s’ingérer jusque dans les petits dossiers. Cet aspect de sa personnalité se révèle aussi sur Twitter. Exemple? Les pics antiitinérants installés devant le magasin Archambault, sur la rue Sainte-Catherine. Le sujet a enflammé les réseaux sociaux, en juin dernier, soulevant l’indignation générale. Le maire n’a pas tardé à réagir. On lui doit même le mot-clic #PicsDeLaHonte.<br/></p>
 
-                        <p>Denis Coderre est connu pour s’ingérer jusque dans les petits dossiers. Cet aspect de sa personnalité se révèle aussi sur Twitter. Exemple? Les pics antiitinérants installés devant le magasin Archambault, sur la rue Sainte-Catherine. Le sujet a enflammé les réseaux sociaux, en juin dernier, soulevant l’indignation générale. Le maire n’a pas tardé à réagir. On lui doit même le mot-clic #PicsDeLaHonte.<br/></p>
-
-                        <div class="evenement">
-                            <div class="tweet">
-                                <div class="avatar"><img src="img/coderre.jpeg"></div>
-                                <div class="handle">DenisCoderre<br>@DenisCoderre</div>
-                                <div class="text">
-                                    Les pics anti-itinérants sont inacceptables!!!!
-                                </div>
-                                <hr>
-                                10:23 - 10 Juin 2014
+                    <div class="evenement">
+                        <div class="tweet">
+                            <div class="avatar"><img src="img/coderre.jpeg"></div>
+                            <div class="handle">DenisCoderre<br>@DenisCoderre</div>
+                            <div class="text">
+                                Les pics anti-itinérants sont inacceptables!!!!
                             </div>
-
-                            <div class="tweet">
-                                <div class="avatar"><img src="img/coderre.jpeg"></div>
-                                <div class="handle">DenisCoderre<br>@DenisCoderre</div>
-                                <div class="text">
-                                    Je me rends sur les lieux pour voir ces inacceptables pics.... #pasdebonsens
-                                </div>
-                                <hr>
-                                10:50 - 10 Juin 2014
-                            </div>
-
-                            <div class="tweet">
-                                <div class="avatar"><img src="img/coderre.jpeg"></div>
-                                <div class="handle">DenisCoderre<br>@DenisCoderre</div>
-                                <div class="text">
-                                    Je vous garantie que ces pics vont disparaître aujourd'hui même si devons les enlever nous
-                                    même !!! #picsdelahonte
-                                </div>
-                                <hr>
-                                11:25 - 10 Juin 2014
-                            </div>
-
-                            <div class="tweet">
-                                <div class="avatar"><img src="img/coderre.jpeg"></div>
-                                <div class="handle">DenisCoderre<br>@DenisCoderre</div>
-                                <div class="text">
-                                    Important de préciser que le magasin Archambault n'a rien à voir avec les #picsdelahonte. Il
-                                    souhaite également qu'on les retire #solidarité
-                                </div>
-                                <hr>
-                                11:33 - 10 Juin 2014
-                            </div>
-
-                            <div class="tweet">
-                                <div class="avatar"><img src="img/coderre.jpeg"></div>
-                                <div class="handle">DenisCoderre<br>@DenisCoderre</div>
-                                <div class="text">
-                                    “@Jasminlavoie Les souhaits de @DenisCoderre ont exaucés 2 employés des propriétaires de
-                                    l'immeuble enlèvent les pics http://t.co/iiN1YslUWm
-                                </div>
-                                <hr>
-                                11:57 - 10 Juin 2014
-                            </div>
+                            <hr>
+                            10:23 - 10 Juin 2014
                         </div>
 
-                        <p>Bien qu’il n’engage pas de discussion, Denis Coderre sonde les citoyens sur Twitter. Les campagnes « Pour ou contre Bixi? » et « Pour ou contre un péage sur le pont Champlain? » en sont deux exemples. Des campagnes au succès discutable, puisque le nombre de réponses générées est plutôt négligeable.<br/></p>
-                        <h2>Souvent sur Twitter, mais surtout le soir</h2>
-                        <p>Non, Denis Coderre ne passe pas sa journée sur son téléphone, mais avec une moyenne de 13 tweets par jour, on peut considérer qu’il regarde souvent son cellulaire. Il le fait toutefois davantage en soirée, puisqu’on remarque que la plage horaire où il est le plus actif est entre 20 h et minuit. On se doute bien pourquoi!</p>
+                        <div class="tweet">
+                            <div class="avatar"><img src="img/coderre.jpeg"></div>
+                            <div class="handle">DenisCoderre<br>@DenisCoderre</div>
+                            <div class="text">
+                                Je me rends sur les lieux pour voir ces inacceptables pics.... #pasdebonsens
+                            </div>
+                            <hr>
+                            10:50 - 10 Juin 2014
+                        </div>
 
-                        <div class="chart-container" id="visu-horaire"></div>
-                        <div class="description">Tweets par heure du jour<hr></div>
+                        <div class="tweet">
+                            <div class="avatar"><img src="img/coderre.jpeg"></div>
+                            <div class="handle">DenisCoderre<br>@DenisCoderre</div>
+                            <div class="text">
+                                Je vous garantie que ces pics vont disparaître aujourd'hui même si devons les enlever nous
+                                même !!! #picsdelahonte
+                            </div>
+                            <hr>
+                            11:25 - 10 Juin 2014
+                        </div>
 
-                        <h2>Denis Coderre en temps de crise<br/></h2>
-                        <p>Les urgences sur le terrain, Denis Coderre les gère... sur le terrain. Il a été absent de Twitter pendant le grabuge à l’hôtel de ville, en août dernier. Il s’est exprimé sur le sujet une semaine après les événements. Il annonçait alors que des accusations seraient portées contre des employés syndiqués. </p>
-                        <p>Quand a-t-il été le plus actif sur Twitter? Les jeux de Sotchi en février 2014, les séries éliminatoires en mai 2014, son voyage à San Francisco en octobre 2014, ainsi que le championnat mondial junior en février dernier. Encore une fois, presque tous des événements reliés aux sports.</p>
+                        <div class="tweet">
+                            <div class="avatar"><img src="img/coderre.jpeg"></div>
+                            <div class="handle">DenisCoderre<br>@DenisCoderre</div>
+                            <div class="text">
+                                Important de préciser que le magasin Archambault n'a rien à voir avec les #picsdelahonte. Il
+                                souhaite également qu'on les retire #solidarité
+                            </div>
+                            <hr>
+                            11:33 - 10 Juin 2014
+                        </div>
 
-                        <div class="chart-container" id="visu-mensuel"></div>
-                        <div class="description">Tweets par mois<hr></div>
+                        <div class="tweet">
+                            <div class="avatar"><img src="img/coderre.jpeg"></div>
+                            <div class="handle">DenisCoderre<br>@DenisCoderre</div>
+                            <div class="text">
+                                “@Jasminlavoie Les souhaits de @DenisCoderre ont exaucés 2 employés des propriétaires de
+                                l'immeuble enlèvent les pics http://t.co/iiN1YslUWm
+                            </div>
+                            <hr>
+                            11:57 - 10 Juin 2014
+                        </div>
+                    </div>
 
-                        <h2>Apprendre de ses erreurs...<br/></h2>
-                        <p>Denis Coderre est très prudent sur les réseaux sociaux. Il aborde de sujets qui le passionnent, mais il évite de se prononcer sur des sujets polémiques. Il apprend de ses erreurs. Bernard Motulsky cite l’exemple de son tweet controversé Un billet simple pour Hamilton pour David Desharnais, svp? qui avait fait réagir des joueurs du Canadien et même la direction.<br/></p>
-                    </blockquote>
+                    <p>Bien qu’il n’engage pas de discussion, Denis Coderre sonde les citoyens sur Twitter. Les campagnes « Pour ou contre Bixi? » et « Pour ou contre un péage sur le pont Champlain? » en sont deux exemples. Des campagnes au succès discutable, puisque le nombre de réponses générées est plutôt négligeable.<br/></p>
+                    <h2>Souvent sur Twitter, mais surtout le soir</h2>
+                    <p>Non, Denis Coderre ne passe pas sa journée sur son téléphone, mais avec une moyenne de 13 tweets par jour, on peut considérer qu’il regarde souvent son cellulaire. Il le fait toutefois davantage en soirée, puisqu’on remarque que la plage horaire où il est le plus actif est entre 20 h et minuit. On se doute bien pourquoi!</p>
+
+                    <div class="chart-container" id="visu-horaire"></div>
+
+                    <h2>Denis Coderre en temps de crise<br/></h2>
+                    <p>Les urgences sur le terrain, Denis Coderre les gère... sur le terrain. Il a été absent de Twitter pendant le grabuge à l’hôtel de ville, en août dernier. Il s’est exprimé sur le sujet une semaine après les événements. Il annonçait alors que des accusations seraient portées contre des employés syndiqués. </p>
+                    <p>Quand a-t-il été le plus actif sur Twitter? Les jeux de Sotchi en février 2014, les séries éliminatoires en mai 2014, son voyage à San Francisco en octobre 2014, ainsi que le championnat mondial junior en février dernier. Encore une fois, presque tous des événements reliés aux sports.</p>
+
+                    <div class="chart-container" id="visu-mensuel"></div>
+
+                    <h2>Apprendre de ses erreurs...<br/></h2>
+                    <p>Denis Coderre est très prudent sur les réseaux sociaux. Il aborde de sujets qui le passionnent, mais il évite de se prononcer sur des sujets polémiques. Il apprend de ses erreurs. Bernard Motulsky cite l’exemple de son tweet controversé Un billet simple pour Hamilton pour David Desharnais, svp? qui avait fait réagir des joueurs du Canadien et même la direction.<br/></p>
                     <blockquote>« Ce tweet a permis de voir qu’un magistrat ne pouvait pas s’exprimer comme le ferait un partisan ou un citoyen. Il n’y a pas de manuel pour utiliser Twitter. Ça, il l’a appris! » </blockquote>
                     <p class="credit">Bernard Motulsky </p>
                     <p class="credit-poste"> Usager twitter</p>
