liste de modifs des RC power girls

--- a/index.html
+++ b/index.html
@@ -116,14 +116,15 @@
                     <p>Si Denis Coderre est connu sur ce réseau social, ce n’est pas uniquement pour son profil politique. Partisan inconditionnel du Tricolore, il ne ménage pas les 140 caractères lors des matchs. Certains le surnomment même « coach mayor ». Avec raison puisque parmi les cinq mots-clics les plus souvent utilisés par le maire, trois sont en lien avec le hockey. </p>
                     <p class="description">Hashtags qui ont plus de quatre occurrences, par catégorie<br/></p>
 
-                    <div class="chart-container" id="visu-bulle"></div>
-                    <div class="legend-container">
-                        <span class="legend" style="background-color:#e06666"></span>Sport
-                        <span class="legend" style="background-color:#aad4e5"></span>Politique
-                        <span class="legend" style="background-color:#65b9ab"></span>Culture
-                        <span class="legend" style="background-color:#75a2cb"></span>Cause
-                        <span class="legend" style="background-color:#eb974f"></span>Humeur
+                    <div class="legend-container" id="visu-bulle-legend">
+                        <span class="legend"><span class="legend-color" style="background-color:#e06666"></span>Sport</span>
+                        <span class="legend"><span class="legend-color" style="background-color:#aad4e5"></span>Politique</span>
+                        <span class="legend"><span class="legend-color" style="background-color:#65b9ab"></span>Culture</span>
+                        <span class="legend"><span class="legend-color" style="background-color:#75a2cb"></span>Cause</span>
+                        <span class="legend"><span class="legend-color" style="background-color:#eb974f"></span>Humeur</span>
                     </div>
+
+                    <div class="chart-container" id="visu-bulle"></div>
 
                     <blockquote>
                         <blockquote>« Le sport, c’est sa marque de commerce. Comme il s’agit d’une passion partagée par plusieurs, ça a pour effet de rassembler les gens.»</blockquote>
@@ -154,8 +155,14 @@
                     <p class="credit-poste">Usager twitter<br/></p>
 
                     <div id="visu-reponses">
-                        <div class="chart-container" id="visu-reponses1"></div>
-                        <div class="chart-container" id="visu-reponses2"></div>
+                        <div class="chart-container" id="visu-reponses1">
+                            <p class="description">Coderre</p>
+                            <div class="chart-inner-container"></div>
+                        </div>
+                        <div class="chart-container" id="visu-reponses2">
+                            <p class="description">St-Hilaire</p>
+                            <div class="chart-inner-container"></div>
+                        </div>
                     </div>
 
                     <p>Denis Coderre est connu pour s’ingérer jusque dans les petits dossiers. Cet aspect de sa personnalité se révèle aussi sur Twitter. Exemple? Les pics antiitinérants installés devant le magasin Archambault, sur la rue Sainte-Catherine. Le sujet a enflammé les réseaux sociaux, en juin dernier, soulevant l’indignation générale. Le maire n’a pas tardé à réagir. On lui doit même le mot-clic #PicsDeLaHonte.<br/></p>
