modif CSS pour visu à bulles

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                     
                     <h2>DENIS CODERRE OU… «&nbsp;COACH MAYOR&nbsp;»? </h2>
                     <p>Si Denis Coderre est connu sur ce réseau social, ce n’est pas uniquement pour son profil politique. Partisan inconditionnel du Tricolore, il ne ménage pas les 140 caractères lors des matchs. Certains le surnomment même «&nbsp;coach mayor&nbsp;». Avec raison, puisque parmi les cinq mots-clics les plus souvent utilisés par le maire, trois sont en lien avec le hockey.  </p>
+<!--                 <div id=visu-bulle-wrapper>-->
                     <p class="description">Mots-clics les plus souvent utilisés<br/></p>
 
                     <div class="legend-container" id="visu-bulle-legend">
@@ -130,6 +131,7 @@
                     </div>
 
                     <div class="chart-container" id="visu-bulle"></div>
+<!--                     </div>-->
 
                     <blockquote>
                         <blockquote>«&nbsp;Le sport, c’est sa marque de commerce. Comme il s’agit d’une passion partagée par plusieurs, ça a pour effet de rassembler les gens.&nbsp;»</blockquote>
