--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@
                     <div id="image-container"><p class="description">Cinq maires sur Twitter, un comparatif</p>
                        <p>La notoriété virtuelle de Denis Coderre, avec ses 191 000 abonnés, dépasse largement celle des maires des principales villes.</p> 
                     </div>
+                    <p class="description_n3">* Compte officiel Équipe Labeaume</p>
+                    
+
                     
                     <h2>Un Jean Drapeau version 2.0?</h2>
 <p>
