--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                     <p class="description">Nombre de tweets répartis selon les heures de la journée</p>
                     
                     <div class="chart-container" id="visu-horaire"></div>
-                    <p class="description_n3" style="margin-top:-10px">Répartition par heure de l’ensemble des tweets de Denis Coderre depuis son élection à la mairie<br/></p>
+                    <p class="description_n3">Répartition par heure de l’ensemble des tweets de Denis Coderre depuis son élection à la mairie<br/></p>
                     <br/>
                     <p>La mairesse de Longueuil le confirme&nbsp;: elle ne pourrait pas passer autant de temps sur Twitter. C’est un pari risqué, renchérit Louis Aucoin, mais la réponse des citoyens prouve que Denis Coderre ne s’est pas trompé.</p>
                                      
